Fixed separator z-index ordering

--- a/src/modules/block-separators/style.scss
+++ b/src/modules/block-separators/style.scss
@@ -4,7 +4,7 @@
 		z-index: 1;
 	}
 	.ugb-inner-block {
-		z-index: 2;
+		z-index: 5;
 	}
 }
 .ugb-top-separator, .ugb-bottom-separator {
